GN-182 Adjust column-gap and chevron size for navlinks on tablet to address issue floating BTT issue.

--- a/src/Header/Nav/NavLinks/NavLinks.module.scss
+++ b/src/Header/Nav/NavLinks/NavLinks.module.scss
@@ -24,8 +24,19 @@ button.link {
     color: $nds-colour-nice-black !important;
   }
 
+  // reduce chevron size on smaller viewport to prevent back-to-top floating issue when site is wider than content
+  svg {
+    max-height: 0.8rem;
+    max-width: 0.8rem;
+  }
+
   @include mq($from: lg) {
     padding: rem($nds-spacing-medium);
+
+    svg {
+      max-height: 1rem;
+      max-width: 1rem;
+    }
   }
 }
 
